<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_wh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/per_title_1"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_da_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/per_1"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/txt_gnt_per"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_bg"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:text="@string/all_per"
                android:textColor="@color/white"
                android:textSize="17.0sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="?android:attr/actionBarItemBackground"
        android:onClick="onClick"
        android:padding="8dp"
        android:src="@drawable/icb_close" />

</RelativeLayout>