<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".PermissionActivity">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_launcher_background" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <!--                    <LinearLayout-->
                        <!--                        android:layout_width="wrap_content"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:orientation="vertical">-->

                        <!--                        <ImageView-->
                        <!--                            android:id="@+id/iv11"-->
                        <!--                            android:layout_width="40dp"-->
                        <!--                            android:layout_height="40dp"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_gravity="center"-->
                        <!--                            android:layout_marginTop="5dp"-->
                        <!--                            android:layout_marginBottom="5dp"-->
                        <!--                            android:padding="5dp"-->
                        <!--                            android:src="@drawable/ic_per_videos" />-->

                        <!--                        <ImageView-->
                        <!--                            android:id="@+id/iv22"-->
                        <!--                            android:layout_width="40dp"-->
                        <!--                            android:layout_height="40dp"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_gravity="center"-->
                        <!--                            android:layout_marginTop="5dp"-->
                        <!--                            android:layout_marginBottom="5dp"-->
                        <!--                            android:padding="5dp"-->
                        <!--                            android:src="@drawable/ic_per_photos" />-->

                        <!--                        <ImageView-->
                        <!--                            android:id="@+id/iv33"-->
                        <!--                            android:layout_width="40dp"-->
                        <!--                            android:layout_height="40dp"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_gravity="center"-->
                        <!--                            android:layout_marginTop="5dp"-->
                        <!--                            android:layout_marginBottom="5dp"-->
                        <!--                            android:padding="5dp"-->
                        <!--                            android:src="@drawable/ic_per_downloads" />-->

                        <!--                        <ImageView-->
                        <!--                            android:id="@+id/iv44"-->
                        <!--                            android:layout_width="40dp"-->
                        <!--                            android:layout_height="40dp"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_gravity="center"-->
                        <!--                            android:layout_marginTop="5dp"-->
                        <!--                            android:layout_marginBottom="5dp"-->
                        <!--                            android:padding="5dp"-->
                        <!--                            android:src="@drawable/ic_per_whats" />-->
                        <!--                    </LinearLayout>-->

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:gravity="center"
                                android:text="@string/acc_video"
                                android:textColor="@color/black"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:gravity="center"
                                android:text="@string/acc_photo"
                                android:textColor="@color/black"
                                android:textSize="16dp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>



                    <TextView
                        android:id="@+id/tvperm"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/btn_bg"
                        android:gravity="center"
                        android:text="@string/per_granted"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>